objects/OriPlast_Product__c.object
<CustomObject>
    <fields>
        <fullName>Base_Unit_of_Measure__c</fullName>
        <description>This field is used for entering a unit of measurement adopted for a base quantity</description>
        <inlineHelpText>It is used for entering Base unit of measure.</inlineHelpText>
        <label>Base Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Picklist__c</fullName>
        <description>This is a picklist field for choosing type of Category for the customers who search for products.</description>
        <inlineHelpText>This is a picklist field for choosing type of category.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                    <label>PVC Pipe ASTM-D-1785, PVC ASTM (Schdule)</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <label>PVC Grey pipes as per IS : 4985,UPVC IS 4985</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                    <label>CASING &amp; PVC Casing Pipes as per IS : 12818</label>
                </value>
                <value>
                    <fullName>P4</fullName>
                    <label>PVC SCREEN &amp; PVC Screen Pipes as per IS : 12818</label>
                </value>
                <value>
                    <fullName>P5</fullName>
                    <label>PVC GARDEN HOSE PIPE</label>
                </value>
                <value>
                    <fullName>P6</fullName>
                    <label>PVC SWR pipes &amp; fittings as per IS:13592</label>
                </value>
                <value>
                    <fullName>P7</fullName>
                    <label>PVC Column Pipe</label>
                </value>
                <value>
                    <fullName>P8</fullName>
                    <label>PVC Submersible</label>
                </value>
                <value>
                    <fullName>P9</fullName>
                    <label>CPVC Pipe</label>
                </value>
                <value>
                    <fullName>PF</fullName>
                    <label>PVC Fittings</label>
                </value>
                <value>
                    <fullName>H1</fullName>
                    <label>HDPE Pipe IS 4984 (Black)</label>
                </value>
                <value>
                    <fullName>H2</fullName>
                    <label>HDPE Pipe IS 14333 (Black)</label>
                </value>
                <value>
                    <fullName>H3</fullName>
                    <label>GI STANDERD &amp; PLB Duct Pipe</label>
                </value>
                <value>
                    <fullName>H4</fullName>
                    <label>HDPE IS 4427 (Blue/Black)</label>
                </value>
                <value>
                    <fullName>H5</fullName>
                    <label>HDPE 4984-2016</label>
                </value>
                <value>
                    <fullName>HF</fullName>
                    <label>HDPE Fittings</label>
                </value>
                <value>
                    <fullName>DF</fullName>
                    <label>Direct Action Hand Pump Fittings</label>
                </value>
                <value>
                    <fullName>M1</fullName>
                    <label>MDPE Pipe &amp; MDPE IS 14885</label>
                </value>
                <value>
                    <fullName>M2</fullName>
                    <label>MDPE pipe &amp; MDPE IS 4427</label>
                </value>
                <value>
                    <fullName>SL</fullName>
                    <label>Solvent Cement</label>
                </value>
                <value>
                    <fullName>NI</fullName>
                    <label>PVC SWR pipes &amp; fittings (non-standard)</label>
                </value>
                <value>
                    <fullName>DP</fullName>
                    <label>Direct Action Hand Pump Set</label>
                </value>
                <value>
                    <fullName>H6</fullName>
                    <label>PPR</label>
                </value>
                <value>
                    <fullName>H7</fullName>
                    <label>HDPE Copper Wire</label>
                </value>
                <value>
                    <fullName>M3</fullName>
                    <label>PE PIPE(MDPE)</label>
                </value>
                <value>
                    <fullName>MF</fullName>
                    <label>MDPE Fittings</label>
                </value>
                <value>
                    <fullName>OF</fullName>
                    <label>OPVC Fittings</label>
                </value>
                <value>
                    <fullName>OP</fullName>
                    <label>OPVC Pipe</label>
                </value>
                <value>
                    <fullName>WT</fullName>
                    <label>WATER TANK and FITTINGS</label>
                </value>
                <value>
                    <fullName>TW</fullName>
                    <isActive>false</isActive>
                    <label>ASTM-D 1785 Push type White, Solvent Ciment Type</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <description>This field is used for Product Color</description>
        <inlineHelpText>It is used for entering Product Color</inlineHelpText>
        <label>Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is for writing description about product</description>
        <inlineHelpText>It is a Description field about Product</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Credit__c</fullName>
        <description>An input tax credit for the tax included in the price of the business inputs</description>
        <inlineHelpText>It is used for entering GST Credit</inlineHelpText>
        <label>GST Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Group_Code__c</fullName>
        <description>This is a group of code for entering GST Group Code</description>
        <inlineHelpText>It is used for GST Group Code</inlineHelpText>
        <label>GST Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Value__c</fullName>
        <description>This Field is used to calculate GST on flow</description>
        <formula>IF( GST_Group_Code__c  = &quot;G18.00&quot;, 18,  IF(GST_Group_Code__c  = &quot;G05.00&quot;, 5, 00) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GST Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gen_Prod_Posting_Group__c</fullName>
        <description>This field is used for defining item and resource in the database.</description>
        <inlineHelpText>It is used for entering General Product Posting Group.</inlineHelpText>
        <label>Gen. Prod. Posting Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSN_SAC_Code__c</fullName>
        <description>This is for entering a standard set of codes</description>
        <inlineHelpText>it is used for entering Code of HSN/SAC</inlineHelpText>
        <label>HSN/SAC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifire_Picklist__c</fullName>
        <description>This is an information element  that are used to establish the unique identity.</description>
        <inlineHelpText>This is for entering unique identity.</inlineHelpText>
        <label>Identifier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PN100</fullName>
                    <label>10kgf/sq</label>
                </value>
                <value>
                    <fullName>PN125</fullName>
                    <label>12.5kgf/sq</label>
                </value>
                <value>
                    <fullName>PN025</fullName>
                    <label>2.5kgf/sq</label>
                </value>
                <value>
                    <fullName>45DY0</fullName>
                </value>
                <value>
                    <fullName>PN040</fullName>
                    <label>4kgf/sq</label>
                </value>
                <value>
                    <fullName>PN060</fullName>
                    <label>6kgf/sq</label>
                </value>
                <value>
                    <fullName>PN06E</fullName>
                    <label>6kgf/sq Elastomeric Pipe</label>
                </value>
                <value>
                    <fullName>PN080</fullName>
                    <label>8kgf/sq</label>
                </value>
                <value>
                    <fullName>AD000</fullName>
                    <label>Adaptor</label>
                </value>
                <value>
                    <fullName>ADHVY</fullName>
                    <label>Adhesive Heavy</label>
                </value>
                <value>
                    <fullName>ADCM0</fullName>
                    <label>Adopter CM</label>
                </value>
                <value>
                    <fullName>AIRCP</fullName>
                </value>
                <value>
                    <fullName>AL576</fullName>
                </value>
                <value>
                    <fullName>ASTE0</fullName>
                </value>
                <value>
                    <fullName>ASTEE</fullName>
                </value>
                <value>
                    <fullName>BV000</fullName>
                    <label>Ball Valve</label>
                </value>
                <value>
                    <fullName>BVUNE</fullName>
                    <label>Ball Valve (Union Ended)</label>
                </value>
                <value>
                    <fullName>BVCSC</fullName>
                    <label>Ball Valve CPVC Concealed Stop Cock</label>
                </value>
                <value>
                    <fullName>BVSSH</fullName>
                    <label>Ball Valve SS Handle</label>
                </value>
                <value>
                    <fullName>BCWSH</fullName>
                </value>
                <value>
                    <fullName>BE225</fullName>
                </value>
                <value>
                    <fullName>BE450</fullName>
                </value>
                <value>
                    <fullName>BE000</fullName>
                    <label>Bend</label>
                </value>
                <value>
                    <fullName>BEND0</fullName>
                </value>
                <value>
                    <fullName>BE105</fullName>
                    <label>Bend 105 Deg</label>
                </value>
                <value>
                    <fullName>BE011</fullName>
                    <label>Bend 11 1/4 Deg</label>
                </value>
                <value>
                    <fullName>BE120</fullName>
                    <label>Bend 120 Deg</label>
                </value>
                <value>
                    <fullName>BE135</fullName>
                    <label>Bend 135 Deg</label>
                </value>
                <value>
                    <fullName>BE148</fullName>
                    <label>Bend 148 Deg</label>
                </value>
                <value>
                    <fullName>BE150</fullName>
                    <label>Bend 150 Deg</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inactive_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Posting_Group__c</fullName>
        <description>This field is used for where in the inventory accounts in the balance,items should be posted,when receiving and selling the items.</description>
        <inlineHelpText>It is used for entering Inventory Posting Group.</inlineHelpText>
        <label>Inventory Posting Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Disc_Group__c</fullName>
        <description>Here the discounts are defined for specific items or item groups.</description>
        <inlineHelpText>It is used for entering Item Discount Group</inlineHelpText>
        <label>Item Disc. Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_In_Meter__c</fullName>
        <description>This field will display the length of the product in meter</description>
        <formula>TEXT(VALUE(Length__c)/10)</formula>
        <label>Length (Meter)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature__c</fullName>
        <label>Nature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Pcs_in_one_box__c</fullName>
        <label>No of Pcs in one box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriPlast_Product_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is an External Id Field For Ori-Plast product.</description>
        <externalId>true</externalId>
        <label>Ori-Plast Product Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Category_Code_Picklist__c</fullName>
        <description>This picklist field is used for choosing code of a category of a product</description>
        <inlineHelpText>It is used for choosing Product Category Code.</inlineHelpText>
        <label>Product Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PVC</fullName>
                    <default>true</default>
                    <label>PVC</label>
                </value>
                <value>
                    <fullName>HDPE</fullName>
                </value>
                <value>
                    <fullName>MDPE</fullName>
                </value>
                <value>
                    <fullName>Fabricated</fullName>
                </value>
                <value>
                    <fullName>Moulding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category_Code__c</fullName>
        <label>Product Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <description>QR Code is used to scan the Product.</description>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=&apos; &amp;   OriPlast_Product_Unique_Key__c ,&apos;Scan QR code to open record in mobile.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It is used to Scan the product.</inlineHelpText>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>This is for entering size of the Ori-plast product.</description>
        <inlineHelpText>it is used to enter the size of the Product</inlineHelpText>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Picklist__c</fullName>
        <description>This is kind of picklist for choosing Sub Category of a product that is nested in another category.</description>
        <inlineHelpText>It is used for choosing Sub Category of a product.</inlineHelpText>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASTM</fullName>
                </value>
                <value>
                    <fullName>CLASS1 (SDR11)</fullName>
                </value>
                <value>
                    <fullName>ISO 4427 Fittings</fullName>
                </value>
                <value>
                    <fullName>Male Thread</fullName>
                </value>
                <value>
                    <fullName>Pipe Grade PE 63</fullName>
                </value>
                <value>
                    <fullName>SDR 41</fullName>
                </value>
                <value>
                    <fullName>Single Socket</fullName>
                </value>
                <value>
                    <fullName>Pipe Grade PE 80</fullName>
                </value>
                <value>
                    <fullName>SDR 33</fullName>
                </value>
                <value>
                    <fullName>Bell End</fullName>
                </value>
                <value>
                    <fullName>CLASS2 (SDR 13.5)</fullName>
                </value>
                <value>
                    <fullName>Double Socket</fullName>
                </value>
                <value>
                    <fullName>IS 14333 Fittings</fullName>
                </value>
                <value>
                    <fullName>Male / Female Thread</fullName>
                </value>
                <value>
                    <fullName>UPVC</fullName>
                </value>
                <value>
                    <fullName>SDR 26</fullName>
                </value>
                <value>
                    <fullName>Pipe Grade PE 100</fullName>
                </value>
                <value>
                    <fullName>Plain End</fullName>
                </value>
                <value>
                    <fullName>Push Type</fullName>
                </value>
                <value>
                    <fullName>Sliding Socket</fullName>
                </value>
                <value>
                    <fullName>SWR</fullName>
                </value>
                <value>
                    <fullName>SDR 21</fullName>
                </value>
                <value>
                    <fullName>Cam Lock</fullName>
                </value>
                <value>
                    <fullName>CPVC</fullName>
                </value>
                <value>
                    <fullName>Flush Joint</fullName>
                </value>
                <value>
                    <fullName>SDR 17</fullName>
                </value>
                <value>
                    <fullName>LED &amp; TIN FREE</fullName>
                </value>
                <value>
                    <fullName>SDR 13.6</fullName>
                </value>
                <value>
                    <fullName>SDR 11</fullName>
                </value>
                <value>
                    <fullName>SDR 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ori-Plast Product</label>
    <nameField>
        <label>Ori-PlastProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ori-Plast Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>